# itson

./: .gitignore  CMakeLists.txt  ClassDiagram.mmd  README.md  README_Presentation.md
data/characters/: template_character.json
data/characters/prompts/: stage_0.txt  stage_1.txt  stage_2.txt  stage_3.txt
data/events/: template_events.json
data/system/: config.json
src/: Character.cpp  Character.h  Config.cpp  Config.h  DialogueManager.cpp  DialogueManager.h  Event.cpp  Event.h  Game.cpp  Game.h  JsonHelper.cpp  JsonHelper.h  LLMClient.cpp  LLMClient.h  Memory.cpp  Memory.h  SaveSystem.cpp  SaveSystem.h  TUI.cpp  TUI.h  main.cpp
